Made second page with flexbox

--- a/flexbox.html
+++ b/flexbox.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+  <title>title</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <link rel="stylesheet" href="./css/flexbox.css" type="text/css">
-  </head>
-  <body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <nav class="nav">
+    <section class="container">
+      <ul class="nav_items">
+        <li><a href="#first">First</a></li>
+        <li><a href="#second">Second</a></li>
+        <li><a href="#third">Third</a></li>
+        <li><a href="#">Fours</a></li>
+      </ul>
+      <div class="login">
+        <a href="index.html" class="left">With Float</a>
+        <img class="avatar right" src="https://tutfgamedida.com/static/web_tutfgamedida/img/avatarHombre.png"
+          alt="avatar">
+      </div>
+    </section>
+  </nav>
+  <header>
+    <div class="header">
+      <img class="header_img" src="https://tutfgamedida.com/static/web_tutfgamedida/img/avatarHombre.png" alt="">
+      <h1>Main Header</h1>
+      <h2>It is a very interesting description</h2>
+      <a href="#first"><i class="fa fa-chevron-down"></i></a>
+    </div>
+  </header>
+  <section id="first" class="articles">
+    <div class="content_item clearfix">
+      <img class="left" src="https://placeimg.com/640/480/tech" alt="some image">
+      <h3>Linear search</h3>
+      <p>Linear search is a very simple search algorithm. In this type of search, a sequential search is made over all
+        items one by one. Every item is checked and if a match is found then that particular item is returned, otherwise
+        the search continues till the end of the data collection.</p>
+    </div>
+    <div class="content_item">
+      <img class="" src="https://placeimg.com/640/480/tech" alt="some image">
+      <h3>A linked list</h3>
+      <p>A linked list is a sequence of data structures, which are connected together via links. Linked List is a
+        sequence of links which contains items. Each link contains a connection to another link. Linked list is the
+        second most-used data structure after array. Following are the important terms to understand the concept of
+        Linked List.</p>
+    </div>
+  </section>
+  <section id="second" class="skills">
+    <div class="skills_item">
+      <h3 class="skills_header">HTML</h3>
+      <img src="https://placeimg.com/640/480/tech" alt="some image">
+      <p>Hypertext Markup Language is the standard markup language for documents designed to be displayed in a web
+        browser. It can be assisted by technologies such as Cascading Style Sheets and scripting languages such as
+        JavaScript.</p>
+      <button>Read more</button>
+    </div>
+    <div class="skills_item">
+      <h3 class="skills_header">CSS</h3>
+      <img src="https://placeimg.com/640/480/tech" alt="some image">
+      <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in
+        a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and
+        JavaScript.</p>
+      <button>Read more</button>
+    </div>
+    <div class="skills_item">
+      <h3 class="skills_header">JS</h3>
+      <img src="https://placeimg.com/640/480/tech" alt="some image">
+      <p>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
+        JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic
+        typing. </p>
+      <button>Read more</button>
+    </div>
+  </section>
+  <footer id="third">
+    <section class="container">
+      <ul class="social">
+        <li><a href="#"><i class="fa fa-instagram"></i>Instagram</a></li>
+        <li><a href="#"><i class="fa fa-linkedin-square"></i>Linkedin</a></li>
+        <li><a href="#"><i class="fa fa-facebook-official"></i>Facebook</a></li>
+      </ul>
+      <p class="copyright right">@ Copyright <span>2020</span></p>
+    </section>
+  </footer>
 
   <script src="index.js" type="text/javascript"></script>
-  </body>
+</body>
+
 </html>
