--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
 <body>
   <nav class="nav clearfix">
-    <ul class="left">
-      <li><a href="#first">First</a></li>
-      <li><a href="#second">Second</a></li>
-      <li><a href="#third">Third</a></li>
-      <li><a href="#">Fours</a></li>
-    </ul>
-    <div class="right">
-      <a href="#" class="left">With Flexbox</a>
-      <img class="avatar right" src="https://tutfgamedida.com/static/web_tutfgamedida/img/avatarHombre.png"
-        alt="avatar">
-    </div>
+    <section>
+        <ul class="left">
+            <li><a href="#first">First</a></li>
+            <li><a href="#second">Second</a></li>
+            <li><a href="#third">Third</a></li>
+            <li><a href="#">Fours</a></li>
+          </ul>
+          <div class="right">
+            <a href="flexbox.html" class="left">With Flexbox</a>
+            <img class="avatar right" src="https://tutfgamedida.com/static/web_tutfgamedida/img/avatarHombre.png"
+              alt="avatar">
+          </div>
+    </section>
   </nav>
   <header>
     <div class="header">
@@ -84,7 +86,7 @@
         <li><a href="#"><i class="fa fa-linkedin-square"></i>Linkedin</a></li>
         <li><a href="#"><i class="fa fa-facebook-official"></i>Facebook</a></li>
       </ul>
-      <p class="copyright right">Copyright <span>2020</span></p>
+      <p class="copyright right">@ Copyright <span>2020</span></p>
     </section>
   </footer>
 
