My project - Last modified

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         Linked List.</p>
     </div>
   </section>
-  <section id="second" class="skills clearfix">
-    <div class="skills_item left">
+  <section id="second" class="skills">
+    <div class="skills_item">
       <h3 class="skills_header">HTML</h3>
       <img src="https://placeimg.com/640/480/tech" alt="some image">
       <p>Hypertext Markup Language is the standard markup language for documents designed to be displayed in a web
@@ -62,7 +62,7 @@
         JavaScript.</p>
       <button>Read more</button>
     </div>
-    <div class="skills_item left">
+    <div class="skills_item">
       <h3 class="skills_header">CSS</h3>
       <img src="https://placeimg.com/640/480/tech" alt="some image">
       <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in
@@ -70,7 +70,7 @@
         JavaScript.</p>
       <button>Read more</button>
     </div>
-    <div class="skills_item left">
+    <div class="skills_item">
       <h3 class="skills_header">JS</h3>
       <img src="https://placeimg.com/640/480/tech" alt="some image">
       <p>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
