Fixed flexbox added reverse for column

--- a/flexbox.html
+++ b/flexbox.html
@@ -37,20 +37,26 @@
     </div>
   </header>
   <section id="first" class="articles">
-    <div class="content_item clearfix">
-      <img class="left" src="https://placeimg.com/640/480/tech" alt="some image">
-      <h3>Linear search</h3>
-      <p>Linear search is a very simple search algorithm. In this type of search, a sequential search is made over all
-        items one by one. Every item is checked and if a match is found then that particular item is returned, otherwise
-        the search continues till the end of the data collection.</p>
-    </div>
     <div class="content_item">
+      <img class="left" src="https://placeimg.com/640/480/tech" alt="some image">
+      <div class="item_wrapper">
+          <h3>Linear search</h3>
+          <p>Linear search is a very simple search algorithm. In this type of search, a sequential search is made over all
+            items one by one. Every item is checked and if a match is found then that particular item is returned, otherwise
+            the search continues till the end of the data collection.
+          </p>
+      </div>
+    </div>
+    <div class="content_item reverse">
       <img class="" src="https://placeimg.com/640/480/tech" alt="some image">
-      <h3>A linked list</h3>
-      <p>A linked list is a sequence of data structures, which are connected together via links. Linked List is a
-        sequence of links which contains items. Each link contains a connection to another link. Linked list is the
-        second most-used data structure after array. Following are the important terms to understand the concept of
-        Linked List.</p>
+      <div class="item_wrapper">
+          <h3>A linked list</h3>
+          <p>A linked list is a sequence of data structures, which are connected together via links. Linked List is a
+            sequence of links which contains items. Each link contains a connection to another link. Linked list is the
+            second most-used data structure after array. Following are the important terms to understand the concept of
+            Linked List.
+          </p>
+      </div>
     </div>
   </section>
   <section id="second" class="skills">
